# VoxelEngine

./: .gitignore  .gitmodules  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  THIRD-PARTY-LICENSES.md
.github/workflows/: ci.yml
assets/blockbench/: generate_sample.py  textured_blocks.bbmodel
bench/: profile_pass.cpp
demos/01-single-voxel/: main.cpp
demos/02-streaming-terrain/: main.cpp
demos/03-plugin-driven-world/: main.cpp
demos/04-build-break-persist/: main.cpp
demos/05-decompose-on-approach/: main.cpp
demos/06-magicavoxel-round-trip/: main.cpp
demos/07-arena-platformer/: main.cpp
demos/08-material-matters/: main.cpp
demos/09-recipe-built-voxel/: main.cpp
demos/10-drill-to-the-core/: main.cpp
demos/11-shared-world/: main.cpp
demos/12-soundscape/: main.cpp
demos/13-structural-collapse/: main.cpp
demos/14-flow-and-heat/: main.cpp
demos/15-textured-blocks/: main.cpp
demos/16-beyond-blocks/: main.cpp
demos/17-asteroid-belt-miner/: main.cpp
demos/18-hud-and-controls/: main.cpp
demos/19-multilevel-collapse/: main.cpp
demos/20-mega-demo/: main.cpp
demos/sandbox/: main.cpp
docs/: architecture.md  configuration-guide.md  creating-voxels.md  m10-incremental-decomposition-plan.md  m15-generality-audit.md  m15-textured-voxels-audit.md  m16-generality-audit-m15-followup.md  m16-generality-audit.md  m17-architecture-gap-audit.md  m17-performance-profiling.md  m17-release-sanity-check.md  m17-skybox-evaluation.md  m18-mega-demo-metrics.md  m18-tutorial-series-plan.md  save-format-versioning.md
docs/proposals/: recipe-occupancy.md
docs/tutorials/: 01-hello-voxel.md  02-your-first-plugin.md  03-materials-and-properties.md  04-composition-recipes.md  05-multi-face-blocks.md  06-importing-voxel-assets.md  07-multi-layer-worlds.md  08-camera-raycasting-interaction.md  09-player-mechanics.md  10-audio-and-sound.md  11-multiplayer.md  12-simulation-fields.md  13-structural-collapse.md  14-performance-tuning.md
include/: WorldCoord.h  plugin_api.h
include/core/: Engine.h  EngineConfig.h  EngineMetrics.h  LayerConfig.h  Profiler.h
include/platform/: NativeWindowHandles.h
include/renderer/: CameraBasis.h  Fog.h  Frustum.h  Renderer.h  RendererFactory.h  Sky.h
plugins/arena/: plugin.cpp
plugins/asteroid-field/: asteroid_field.h  plugin.cpp
plugins/atmospheric-mist/: atmospheric_mist.h  plugin.cpp
plugins/base-terrain/: plugin.cpp
plugins/blockbench/: plugin.cpp
plugins/chat/: plugin.cpp
plugins/crumble/: plugin.cpp
plugins/drill-world/: plugin.cpp
plugins/example-hooks/: example_hooks.h  plugin.cpp
plugins/falling-debris/: plugin.cpp
plugins/field-sources/: plugin.cpp
plugins/floating-playspace/: plugin.cpp
plugins/flow/: plugin.cpp
plugins/gamepad/: gamepad.h  plugin.cpp
plugins/hazards/: plugin.cpp
plugins/keyboard-mouse/: keyboard_mouse.h  plugin.cpp
plugins/kinematic-body/: kinematic_body.h  plugin.cpp
plugins/layered-world/: plugin.cpp
plugins/material-audio/: plugin.cpp
plugins/material-showcase/: plugin.cpp
plugins/mob/: mob.h  plugin.cpp
plugins/overworld/: plugin.cpp
plugins/procedural-sky/: plugin.cpp  procedural_sky.h
plugins/range-attenuation/: plugin.cpp  range_attenuation.h
plugins/recipe-world/: plugin.cpp
plugins/server-authority/: plugin.cpp
plugins/trees/: plugin.cpp
plugins/water/: plugin.cpp
shaders/: fs_voxel.sc  varying.def.sc  vs_voxel.sc
src/: main.cpp
src/audio/: AudioManager.cpp  AudioManager.h  AudioValidation.cpp  AudioValidation.h  IAudioBackend.cpp  IAudioBackend.h  MiniaudioBackend.cpp  MiniaudioBackend.h
src/core/: Engine.cpp  Engine.h  EngineConfig.cpp  LayerConfig.cpp  LayerConfig.h  Logger.cpp  Logger.h  PluginManager.cpp  PluginManager.h  Profiler.cpp  RecipeValidation.cpp  RecipeValidation.h  Tuning.h
src/enums/: VoxelEnums.h
src/io/: ChunkPersistence.cpp  ChunkPersistence.h  QbExporter.cpp  QbExporter.h  QbImporter.cpp  QbImporter.h  VoxExporter.cpp  VoxExporter.h  VoxImporter.cpp  VoxImporter.h
src/net/: ENetTransport.cpp  ENetTransport.h  ITransport.cpp  ITransport.h  NetJoinHandshake.h  NetPackets.h  NetworkManager.cpp  NetworkManager.h
src/platform/: Window.cpp  Window.h
src/plugins/: ExamplePlugin.cpp  ExamplePlugin.h
src/renderer/: BgfxRenderer.cpp  BgfxRenderer.h  ChunkMesh.cpp  ChunkMesh.h  ChunkMeshData.cpp  ChunkMeshData.h  LODManager.cpp  LODManager.h  MaterialFaces.cpp  MaterialFaces.h  Palette.h  Renderer.h  RendererFactory.cpp  TextureAtlasData.cpp  TextureAtlasData.h  TextureManager.cpp  TextureManager.h
src/simulation/: FieldOverlay.h  FluidSystem.cpp  FluidSystem.h  LightingSystem.cpp  (+12 more)
templates/: README.md
tests/: ArenaConfigAndGeneratorsTest.cpp  ArenaGameObjectiveTest.cpp  ArenaPlatformerMechanicsTest.cpp  AsteroidFieldTest.cpp  AudioBackendTest.cpp  AudioSpatialTest.cpp  AudioValidationTest.cpp  BlockbenchImportTest.cpp  CameraBasisTest.cpp  CascadeDecompositionTest.cpp  ChunkCoordMathTest.cpp  ChunkDirtyTest.cpp  ChunkMeshDataTest.cpp  ChunkPersistenceTest.cpp  CollisionGravityTest.cpp  DecompositionTest.cpp  DerivedOccupancyTest.cpp  EditReplicationTest.cpp  EngineConfigTest.cpp  EngineMetricsTest.cpp  ExampleHooksTest.cpp  FaceRoleTest.cpp  FieldOverlayTest.cpp  FluidFlowTest.cpp  FluidGravityTest.cpp  FluidThermalInvariantTest.cpp  FluidVoxelCoherenceTest.cpp  FogTest.cpp  FrustumTest.cpp  GeneratorDeterminismTest.cpp  GravityProviderTest.cpp  ImmutableBoundaryTest.cpp  ImmutableStreamingTest.cpp  InputPluginsTest.cpp  InteractiveLayerTest.cpp  InterestManagementTest.cpp  InterestVolumeTest.cpp  JoinHandshakeTest.cpp  KinematicBodyTest.cpp  LODManagerTest.cpp  (+39 more)
voxel-game-engine/: .gitignore  CMakeLists.txt  README.md
voxel-game-engine/include/: plugin_api.h
voxel-game-engine/src/: main.cpp
voxel-game-engine/src/core/: Engine.cpp  Engine.h  PluginManager.cpp  PluginManager.h
voxel-game-engine/src/plugins/: ExamplePlugin.cpp
voxel-game-engine/src/renderer/: BgfxRenderer.cpp  BgfxRenderer.h  Renderer.cpp  Renderer.h
voxel-game-engine/src/world/: Voxel.cpp  Voxel.h  World.cpp  World.h
(+40 files in other folders)
